--- a/efl-online/src/App.css
+++ b/efl-online/src/App.css
@@ -1,3 +1,8 @@
+html{
+  background-color: #f4f4f5 !important;
+  
+}
+
 body, .App{
   min-height: 100vh;
   min-width:100vw;
@@ -129,4 +134,190 @@ label{
 
 .multisteps-form__panel {
   position: relative;
+}
+
+.profile-header-logo{
+  background-position: 80% 30% ;
+  background-size: 30%;
+  background-repeat: no-repeat;
+  margin-bottom: 30px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 0.75rem;
+  opacity:.6;
+  filter:grayscale(100%);
+  z-index:2;
+}
+
+.bg-wave{
+  background: url('assets/img/seamlessWavePattern_Dark.png') repeat;
+  background-size: 200px;
+  opacity:.4;
+  z-index:1;
+}
+
+.card-body{
+  z-index:5 !important;
+}
+
+.cap{
+  opacity:.0;
+
+}
+
+.cap.active-cap{
+  opacity:1;
+  background:#171949;
+  color:White;
+  border-radius:10px;
+  padding:8px 0px;
+  font-size:.7em !important;
+}
+
+
+
+.create-placeholder{
+    background:none;  
+    box-shadow:0 0 0 0;
+    background-image: repeating-linear-gradient(90deg, #00000040, #00000040 12px, transparent 12px, transparent 27px), repeating-linear-gradient(180deg, #00000040, #00000040 12px, transparent 12px, transparent 27px), repeating-linear-gradient(90deg, #00000040, #00000040 12px, transparent 12px, transparent 27px), repeating-linear-gradient(180deg, #00000040, #00000040 12px, transparent 12px, transparent 27px);
+    background-position: left top, right top, left bottom, left top;
+    background-repeat: repeat-x, repeat-y, repeat-x, repeat-y;
+    background-size: 100% 3px, 3px 100%, 100% 3px, 3px 100%;
+    min-height:130px;
+  
+}
+
+button.create-player{
+  position:relative;
+  padding:15px 25px;
+  background:linear-gradient(rgba(0,0,0,.0), rgba(0,0,0,.0)), 
+    linear-gradient(135deg, rgba(0,73,144,0), rgba(0,0,0,0)),
+    #fff;
+  color:#171949;
+  display:inline-block;
+  text-transform:uppercase;
+  font-size:10px;
+  font-weight:700;
+  border-radius:113px;
+  cursor:pointer;
+  box-shadow: 5px 5px 10px 0 rgba(0,0,0,.1);
+  border:1px solid #00000020;
+  overflow:hidden;
+  transition:all 1s;
+  background: linear-gradient(135deg, #e7e8e5 60%, #17194920 100%);
+}
+
+
+button.create-player:hover{
+  background: linear-gradient(135deg, #e7e8e5 20%, #17194930 100%);
+}
+
+button.create-player svg{
+  margin-right: 10px;
+}
+
+.table thead th,
+.table tbody td{
+  padding:5px 10px !important;
+}
+
+.alerts{
+  position:absolute;
+  bottom:0;
+  box-sizing: border-box;
+  z-index:10;
+  padding:20px;
+  display: flex;
+  flex-direction: column-reverse;
+  z-index:1000000;
+}
+
+tr.link { cursor: pointer; }
+
+tr.link:hover td{
+  background:#00000010;
+}
+
+.mini-headers .player-header h2{
+  font-size:1.25em;
+}
+
+.mini-headers .player-header p{
+  font-size:.8em;
+}
+.mini-headers .player-header .badge{
+  margin-bottom:10px !important;
+  font-size:.7em;
+}
+
+.mini-headers 
+.profile-header-logo:not(.bg-wave){
+  background-position: 100% 35% ;
+  background-size: 60%;
+}
+
+.mini-headers .team-assn-btn{
+  display:none;
+}
+
+tr.pointTask{
+  border-top:1px solid #00000090 !important;
+  padding:20px;
+}
+
+.table{
+  border-collapse:collapse;
+}
+
+tr.active-stat{
+  background:#bffcff50;
+}
+
+.accordion-button{
+  background:linear-gradient(135deg, #00EAF930, #43F07030) !important;
+  border-radius: 5px !important;
+  margin-bottom:10px;
+}
+
+
+.accordion-button:hover{
+  background:linear-gradient(135deg, #00EAF950, #43F07040) !important;
+  box-shadow: 0 0 10px 0 #00000005;
+}
+
+.modal-body.updateHistory{
+  height:70vh;
+  overflow-y:auto;
+}
+
+.mini-heading{
+  opacity:.6;
+  text-transform: uppercase;
+  font-size:12px;
+  letter-spacing:1px;
+  margin-bottom:20px;
+}
+
+.svg-btn{
+  cursor:pointer;
+}
+
+.player-header .city{
+  margin-bottom:-5px;
+  text-transform: uppercase;
+  font-weight:bold;
+  font-size: 14px;
+  opacity:.5;
+}
+
+.team-header {
+  overflow:hidden;
+}
+
+.team-header 
+.profile-header-logo:not(.bg-wave){
+  opacity:.9;
+  filter:grayscale(0%);
+  z-index:4;
 }
